Closed
Bug 1275754
Opened 9 years ago
Closed 9 years ago
Strip obsolete updates from MediaStreamGraphImpl::mStreamUpdates when adding new updates
Categories
(Core :: Web Audio, defect, P1)
Core
Web Audio
Tracking
()
RESOLVED
FIXED
mozilla49
People
(Reporter: karlt, Assigned: karlt)
References
Details
Attachments
(1 file)
|
58 bytes,
text/x-review-board-request
|
padenot
:
review+
Sylvestre
:
approval-mozilla-aurora+
|
Details |
https://bugzilla.mozilla.org/show_bug.cgi?id=1274797#c4 suspects that
mStreamUpdates is growing large when the main thread is busy and so not
emptying.
To avoid this, the graph thread can strip obsolete updates from the queue when
it is adding more recent updates.
| Assignee | ||
Comment 1•9 years ago
|
||
https://treeherder.mozilla.org/#/jobs?repo=try&revision=a0fa70104f55 looks colorful, but the failures are mostly relating to copy/paste.
| Assignee | ||
Comment 2•9 years ago
|
||
Review commit: https://reviewboard.mozilla.org/r/55366/diff/#index_header
See other reviews: https://reviewboard.mozilla.org/r/55366/
Attachment #8756724 -
Flags: review?(padenot)
Comment 3•9 years ago
|
||
Comment on attachment 8756724 [details]
MozReview Request: bug 1275754 strip obsolete updates from mStreamUpdates when adding new updates r?padenot
https://reviewboard.mozilla.org/r/55366/#review52154
Attachment #8756724 -
Flags: review?(padenot) → review+
Comment 5•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla49
| Assignee | ||
Comment 6•9 years ago
|
||
Comment on attachment 8756724 [details]
MozReview Request: bug 1275754 strip obsolete updates from mStreamUpdates when adding new updates r?padenot
Approval Request Comment
[Feature/regressing bug #]: probably introduction of web audio
[User impact if declined]: low volume OOM crash reported in bug 1274797.
This addresses the suspected cause, but we won't know for certain whether it helps until this reaches beta, due to low crash volume.
[Describe test coverage new/current, TreeHerder]:
No new coverage. Code is exercised by many automated tests.
[Risks and why]: low, due to test coverage.
[String/UUID change made/needed]: none.
Attachment #8756724 -
Flags: approval-mozilla-aurora?
Updated•9 years ago
|
status-firefox48:
--- → affected
Comment 7•9 years ago
|
||
Comment on attachment 8756724 [details]
MozReview Request: bug 1275754 strip obsolete updates from mStreamUpdates when adding new updates r?padenot
Fix potential OOM crashes, taking it
Attachment #8756724 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 8•9 years ago
|
||
| bugherder uplift | ||
You need to log in
before you can comment on or make changes to this bug.
Description
•