bug 1275754 strip obsolete updates from mStreamUpdates when adding new updates r=padenot

MozReview-Commit-ID: 64tRYsgC1pC